# paired-fastq-igblast-airr-tsv

./: .gitignore  README.md  pyproject.toml
docs/: RG_company_excel_comparison_note_20260503.md  RG_nonmerge_integration_discussion_summary_20260503.md
src/airr_igblast_paired/: __init__.py  cli.py  fastq.py  gui.py  igblast.py  naming.py  pair_summary.py  pipeline.py  prepare.py  xlsx_writer.py
tests/: test_fastq.py  test_igblast.py  test_naming.py  test_pair_summary.py  test_pipeline.py  test_prepare.py
