[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paired-fastq-igblast-airr-tsv"
version = "0.1.0"
description = "Build AIRR TSV output from unmerged paired-end FASTQ reads using IgBLAST outfmt 19."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
paired-fastq-igblast-airr-tsv = "airr_igblast_paired.cli:main"
airr-igblast-paired = "airr_igblast_paired.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
